--- a/192/index.html
+++ b/192/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-04-23 -->
+<!-- 2024-04-24 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>192</title>
@@ -22,23 +22,24 @@
 <ul>
 <li><a href="#orgcecfe29">1. 笔记</a>
 <ul>
-<li><a href="#org2cb6f14">1.1. 2024-04-16 10:54:48</a></li>
-<li><a href="#org25850dc">1.2. 2024-04-11 10:15:42</a></li>
-<li><a href="#org0ec5c7f">1.3. 2024-04-10 09:15:42</a></li>
-<li><a href="#org4a1e152">1.4. 2024-04-09 10:24:50</a></li>
-<li><a href="#org14d735d">1.5. 2024-04-03 09:26:26</a></li>
-<li><a href="#org25d14b5">1.6. 2024-04-02 10:54:48</a></li>
-<li><a href="#org30b5844">1.7. 2024-03-27 08:28:29</a></li>
-<li><a href="#org2e51549">1.8. 2024-03-26 10:36:40</a></li>
-<li><a href="#org7ebc4f2">1.9. 2024-03-20 14:58:37</a></li>
-<li><a href="#org30e98f4">1.10. 2024-03-19 10:49:19</a></li>
-<li><a href="#org2309290">1.11. 2024-03-13 08:31:23</a></li>
-<li><a href="#orgd40edb2">1.12. 2024-03-12 11:07:40</a></li>
-<li><a href="#orgbb73b3f">1.13. 2024-01-16 (寒假作业)</a></li>
-<li><a href="#orgdd2b753">1.14. 2024-01-16 (期末成绩)</a></li>
-<li><a href="#orgad105e2">1.15. 2023-12-26 (任务)</a></li>
-<li><a href="#org64a4c8c">1.16. 2023-10-31 (任务)</a></li>
-<li><a href="#org16fdc68">1.17. 2023-09-06 (任务)</a></li>
+<li><a href="#orgfecbaba">1.1. 2024-04-24 09:03:30</a></li>
+<li><a href="#org2cb6f14">1.2. 2024-04-16 10:54:48</a></li>
+<li><a href="#org25850dc">1.3. 2024-04-11 10:15:42</a></li>
+<li><a href="#org0ec5c7f">1.4. 2024-04-10 09:15:42</a></li>
+<li><a href="#org4a1e152">1.5. 2024-04-09 10:24:50</a></li>
+<li><a href="#org14d735d">1.6. 2024-04-03 09:26:26</a></li>
+<li><a href="#org25d14b5">1.7. 2024-04-02 10:54:48</a></li>
+<li><a href="#org30b5844">1.8. 2024-03-27 08:28:29</a></li>
+<li><a href="#org2e51549">1.9. 2024-03-26 10:36:40</a></li>
+<li><a href="#org7ebc4f2">1.10. 2024-03-20 14:58:37</a></li>
+<li><a href="#org30e98f4">1.11. 2024-03-19 10:49:19</a></li>
+<li><a href="#org2309290">1.12. 2024-03-13 08:31:23</a></li>
+<li><a href="#orgd40edb2">1.13. 2024-03-12 11:07:40</a></li>
+<li><a href="#orgbb73b3f">1.14. 2024-01-16 (寒假作业)</a></li>
+<li><a href="#orgdd2b753">1.15. 2024-01-16 (期末成绩)</a></li>
+<li><a href="#orgad105e2">1.16. 2023-12-26 (任务)</a></li>
+<li><a href="#org64a4c8c">1.17. 2023-10-31 (任务)</a></li>
+<li><a href="#org16fdc68">1.18. 2023-09-06 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#org366482f">2. 任务结果</a></li>
@@ -66,9 +67,50 @@
 <h2 id="orgcecfe29"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org2cb6f14" class="outline-3">
-<h3 id="org2cb6f14"><span class="section-number-3">1.1.</span> 2024-04-16 10:54:48</h3>
+<div id="outline-container-orgfecbaba" class="outline-3">
+<h3 id="orgfecbaba"><span class="section-number-3">1.1.</span> 2024-04-24 09:03:30</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+温度转换，代码示例:
+</p>
+
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">void</span> <span style="color: #721045;">xxxjkdsjfksjdkfjdsk</span> <span style="color: #000000;">()</span>
+<span class="linenr"> 2: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 3: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">1. &#33719;&#21462;&#29992;&#25143;&#36755;&#20837;&#65292;&#24182;&#36716;&#25442;&#20026;&#21487;&#35745;&#31639;&#30340;&#25968;&#23383;</span>
+<span class="linenr"> 4: </span>    <span style="color: #005a5f;">double</span> <span style="color: #00538b;">&#21326;&#27663;&#28201;&#24230;</span> = <span style="color: #005a5f;">double</span>.<span style="color: #721045;">Parse</span><span style="color: #a8007f;">(</span>huashiwend&#65365;Box.Text<span style="color: #a8007f;">)</span>;
+<span class="linenr"> 5: </span>
+<span class="linenr"> 6: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">2. &#36890;&#36807;&#20844;&#24335;&#65292;&#35745;&#31639;&#20986;&#38656;&#35201;&#30340;&#32467;&#26524; 6/4=1 6%4=2</span>
+<span class="linenr"> 7: </span>    <span style="color: #005a5f;">double</span> <span style="color: #00538b;">&#25668;&#27663;&#28201;&#24230;</span> = <span style="color: #a8007f;">(</span>5.0 / 9<span style="color: #a8007f;">)</span> * <span style="color: #a8007f;">(</span>&#21326;&#27663;&#28201;&#24230; - 32<span style="color: #a8007f;">)</span>;
+<span class="linenr"> 8: </span>
+<span class="linenr"> 9: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">3. &#23558;&#32467;&#26524;&#26174;&#31034;&#21040;&#30028;&#38754;&#19978;</span>
+<span class="linenr">10: </span>    jieguoLabel.Text = $<span style="color: #2544bb;">"&#25668;&#27663;&#28201;&#24230;: {&#25668;&#27663;&#28201;&#24230;:f2}"</span>;
+<span class="linenr">11: </span>
+<span class="linenr">12: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">4. &#20248;&#21270;&#29992;&#25143;&#20307;&#39564;</span>
+<span class="linenr">13: </span>    huashiwend&#65365;Box.<span style="color: #721045;">Focus</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">14: </span>    huashiwend&#65365;Box.<span style="color: #721045;">SelectAll</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">15: </span><span style="color: #000000;">}</span>
+<span class="linenr">16: </span>
+<span class="linenr">17: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">zhuanhuanBtn_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">18: </span><span style="color: #000000;">{</span>
+<span class="linenr">19: </span>    <span style="color: #721045;">xxxjkdsjfksjdkfjdsk</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">20: </span><span style="color: #000000;">}</span>
+<span class="linenr">21: </span>
+<span class="linenr">22: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">huashiwend&#65365;Box_KeyUp</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">KeyEventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">23: </span><span style="color: #000000;">{</span>
+<span class="linenr">24: </span>    <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>e.KeyCode == Keys.Enter<span style="color: #a8007f;">)</span>
+<span class="linenr">25: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">26: </span>        <span style="color: #721045;">xxxjkdsjfksjdkfjdsk</span><span style="color: #005f88;">()</span>;
+<span class="linenr">27: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">28: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-org2cb6f14" class="outline-3">
+<h3 id="org2cb6f14"><span class="section-number-3">1.2.</span> 2024-04-16 10:54:48</h3>
+<div class="outline-text-3" id="text-1-2">
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">Point</span> <span style="color: #00538b;">yuanlaidepianyi</span>;
 <span class="linenr"> 2: </span><span style="color: #005a5f;">bool</span> <span style="color: #00538b;">&#40736;&#26631;&#25353;&#19979;&#21435;&#20102;&#21527;</span> = <span style="color: #0000c0;">false</span>;
@@ -105,8 +147,8 @@
 </div>
 
 <div id="outline-container-org25850dc" class="outline-3">
-<h3 id="org25850dc"><span class="section-number-3">1.2.</span> 2024-04-11 10:15:42</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="org25850dc"><span class="section-number-3">1.3.</span> 2024-04-11 10:15:42</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 小测验，猜数字。详情见课本 21 页。
 </p>
@@ -114,8 +156,8 @@
 </div>
 
 <div id="outline-container-org0ec5c7f" class="outline-3">
-<h3 id="org0ec5c7f"><span class="section-number-3">1.3.</span> 2024-04-10 09:15:42</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="org0ec5c7f"><span class="section-number-3">1.4.</span> 2024-04-10 09:15:42</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 小测验，温度转换。详情见课本 20 页。
 </p>
@@ -123,8 +165,8 @@
 </div>
 
 <div id="outline-container-org4a1e152" class="outline-3">
-<h3 id="org4a1e152"><span class="section-number-3">1.4.</span> 2024-04-09 10:24:50</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="org4a1e152"><span class="section-number-3">1.5.</span> 2024-04-09 10:24:50</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 小测验，不规则的闹钟。详情见课本 22 页。
 </p>
@@ -132,8 +174,8 @@
 </div>
 
 <div id="outline-container-org14d735d" class="outline-3">
-<h3 id="org14d735d"><span class="section-number-3">1.5.</span> 2024-04-03 09:26:26</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="org14d735d"><span class="section-number-3">1.6.</span> 2024-04-03 09:26:26</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 关于跳动的心，需要掌握:
 </p>
@@ -155,8 +197,8 @@
 </div>
 
 <div id="outline-container-org25d14b5" class="outline-3">
-<h3 id="org25d14b5"><span class="section-number-3">1.6.</span> 2024-04-02 10:54:48</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="org25d14b5"><span class="section-number-3">1.7.</span> 2024-04-02 10:54:48</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 Tips:
 </p>
@@ -172,8 +214,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org30b5844" class="outline-3">
-<h3 id="org30b5844"><span class="section-number-3">1.7.</span> 2024-03-27 08:28:29</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="org30b5844"><span class="section-number-3">1.8.</span> 2024-03-27 08:28:29</h3>
+<div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li>练习上次的内容，搞会</li>
 <li>按照课本第10页，完成登录项目的编写</li>
@@ -183,8 +225,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org2e51549" class="outline-3">
-<h3 id="org2e51549"><span class="section-number-3">1.8.</span> 2024-03-26 10:36:40</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="org2e51549"><span class="section-number-3">1.9.</span> 2024-03-26 10:36:40</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 组件、控件、Control，在 C# 中，实际就是一个类的实例。
 </p>
@@ -240,8 +282,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org7ebc4f2" class="outline-3">
-<h3 id="org7ebc4f2"><span class="section-number-3">1.9.</span> 2024-03-20 14:58:37</h3>
-<div class="outline-text-3" id="text-1-9">
+<h3 id="org7ebc4f2"><span class="section-number-3">1.10.</span> 2024-03-20 14:58:37</h3>
+<div class="outline-text-3" id="text-1-10">
 <p>
 一个小挑战。
 </p>
@@ -259,8 +301,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org30e98f4" class="outline-3">
-<h3 id="org30e98f4"><span class="section-number-3">1.10.</span> 2024-03-19 10:49:19</h3>
-<div class="outline-text-3" id="text-1-10">
+<h3 id="org30e98f4"><span class="section-number-3">1.11.</span> 2024-03-19 10:49:19</h3>
+<div class="outline-text-3" id="text-1-11">
 <p>
 实际上，一个窗体就是一个 C# 的类型。对应三个文件：
 </p>
@@ -352,8 +394,8 @@ DataTable.Compute
 </div>
 
 <div id="outline-container-org2309290" class="outline-3">
-<h3 id="org2309290"><span class="section-number-3">1.11.</span> 2024-03-13 08:31:23</h3>
-<div class="outline-text-3" id="text-1-11">
+<h3 id="org2309290"><span class="section-number-3">1.12.</span> 2024-03-13 08:31:23</h3>
+<div class="outline-text-3" id="text-1-12">
 <p>
 上课了
 </p>
@@ -467,8 +509,8 @@ GUI 程序 (Graphic User Interface):
 </div>
 
 <div id="outline-container-orgd40edb2" class="outline-3">
-<h3 id="orgd40edb2"><span class="section-number-3">1.12.</span> 2024-03-12 11:07:40</h3>
-<div class="outline-text-3" id="text-1-12">
+<h3 id="orgd40edb2"><span class="section-number-3">1.13.</span> 2024-03-12 11:07:40</h3>
+<div class="outline-text-3" id="text-1-13">
 <p>
 记住: <b>Console.ReadLine 方法，返回的是一个字符串类型!!!</b>
 </p>
@@ -484,8 +526,8 @@ string abc = Console.ReadLine();
 </div>
 
 <div id="outline-container-orgbb73b3f" class="outline-3">
-<h3 id="orgbb73b3f"><span class="section-number-3">1.13.</span> 2024-01-16 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-13">
+<h3 id="orgbb73b3f"><span class="section-number-3">1.14.</span> 2024-01-16 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-14">
 <p>
 C/S架构编程，做完第一章所有的上机题:
 </p>
@@ -497,8 +539,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgdd2b753" class="outline-3">
-<h3 id="orgdd2b753"><span class="section-number-3">1.14.</span> 2024-01-16 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-14">
+<h3 id="orgdd2b753"><span class="section-number-3">1.15.</span> 2024-01-16 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-15">
 <table>
 
 
@@ -918,8 +960,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgad105e2" class="outline-3">
-<h3 id="orgad105e2"><span class="section-number-3">1.15.</span> 2023-12-26 (任务)</h3>
-<div class="outline-text-3" id="text-1-15">
+<h3 id="orgad105e2"><span class="section-number-3">1.16.</span> 2023-12-26 (任务)</h3>
+<div class="outline-text-3" id="text-1-16">
 <p>
 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
 </p>
@@ -927,8 +969,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org64a4c8c" class="outline-3">
-<h3 id="org64a4c8c"><span class="section-number-3">1.16.</span> 2023-10-31 (任务)</h3>
-<div class="outline-text-3" id="text-1-16">
+<h3 id="org64a4c8c"><span class="section-number-3">1.17.</span> 2023-10-31 (任务)</h3>
+<div class="outline-text-3" id="text-1-17">
 <p>
 创建类 PLC，描述设备的基本信息并添加基本控制
 </p>
@@ -936,8 +978,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org16fdc68" class="outline-3">
-<h3 id="org16fdc68"><span class="section-number-3">1.17.</span> 2023-09-06 (任务)</h3>
-<div class="outline-text-3" id="text-1-17">
+<h3 id="org16fdc68"><span class="section-number-3">1.18.</span> 2023-09-06 (任务)</h3>
+<div class="outline-text-3" id="text-1-18">
 <p>
 1.hello.txt, 完成从创建文件、编译到运行的整个过程
 </p>
@@ -949,7 +991,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-org366482f" class="outline-2">
 <h2 id="org366482f"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org77d3355">
+<table id="org39aecac">
 
 
 <colgroup>
@@ -1314,7 +1356,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="org39aecac">
+<table id="org8271a15">
 
 
 <colgroup>
@@ -1980,7 +2022,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-04-23</p>
+<p class="date">Created: 2024-04-24</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
